--- a/src/main/webapp/padrao.css
+++ b/src/main/webapp/padrao.css
@@ -1,10 +1,19 @@
 h1{
     font-family: 'Nunito', sans-serif;
 }
-p{
+.p_form{
     font-family: 'Nunito', sans-serif;
     font-weight: bold;
     font-size: 20px;
+}
+.custom_h2{
+    padding: 0 5px 0 5px;
+    font-family: 'Josefin Slab', sans-serif;
+}
+.input_form{
+    border: 1px solid gray;
+    border-radius: 5px;
+    font-family: 'Arvo', serif;
 }
 a {
     color: #000;
@@ -52,6 +61,10 @@ a:hover:after {
 }
 .tableList tr:nth-child(even) {
     background: #eee
+}
+.row{
+    display: flex;
+    align-items: center;
 }
 
 
