--- a/src/main/webapp/padrao.css
+++ b/src/main/webapp/padrao.css
@@ -1,3 +1,9 @@
+a{
+    text-decoration: none;
+}
+a:hover{
+    text-decoration: none !important;
+}
 h1{
     font-family: 'Nunito', sans-serif;
 }
@@ -5,6 +11,8 @@ h1{
     font-family: 'Nunito', sans-serif;
     font-weight: bold;
     font-size: 20px;
+    margin-top: 1rem;
+    margin-bottom: 0;
 }
 .custom_h2{
     padding: 0 5px 0 5px;
@@ -15,7 +23,7 @@ h1{
     border-radius: 5px;
     font-family: 'Arvo', serif;
 }
-a {
+.linkhover {
     color: #000;
     text-transform: uppercase;
     text-decoration: none;
@@ -25,7 +33,7 @@ a {
     padding: 5px 5px;
     position: relative;
 }
-a:after {    
+.linkhover:after {    
     background: none repeat scroll 0 0 transparent;
     bottom: 0;
     content: "";
@@ -37,7 +45,7 @@ a:after {
     transition: width 0.2s ease 0s, left 0.2s ease 0s;
     width: 0;
 }
-a:hover:after { 
+.linkhover:hover:after { 
     width: 100%; 
     left: 0; 
 }
@@ -62,11 +70,6 @@ a:hover:after {
 .tableList tr:nth-child(even) {
     background: #eee
 }
-.row{
-    display: flex;
-    align-items: center;
-}
-
 
 /*CSS APENAS DO SLIDER*/
 
@@ -85,8 +88,8 @@ a:hover:after {
 }
 .switch--shadow + label {
     padding: 2px;
-    width: 40px;
-    height: 20px;
+    width: 60px;
+    height: 26px;
     background-color: #dddddd;
     border-radius: 60px;
 }
@@ -106,7 +109,7 @@ a:hover:after {
     transition: all 0.2s;
 }
 .switch--shadow + label:after {
-    width: 20px;
+    width: 24px;
     background-color: #fff;
     border-radius: 100%;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
@@ -116,7 +119,7 @@ a:hover:after {
     background-color: #8ce196;
 }
 .switch--shadow:checked + label:after {
-    transform: translateX(22px);
+    transform: translateX(34px);
 }
 
 /*FIM CSS APENAS DO SLIDER*/
