Alterações no front end do sistema todo

--- a/src/main/webapp/Principal.css
+++ b/src/main/webapp/Principal.css
@@ -1,5 +1,5 @@
 .card-body{
-    background-color: #eee !important;
+    background-color: #fff !important;
     margin-bottom: 20px;
     transition-duration: 0.2s;
 }
