--- a/src/main/webapp/padrao.css
+++ b/src/main/webapp/padrao.css
@@ -1,3 +1,7 @@
+body {
+    padding: 5rem 0 10rem 0;
+    background-color: #eee !important;
+}
 a{
     text-decoration: none;
 }
@@ -11,31 +15,70 @@ h1{
     font-family: 'Nunito', sans-serif;
     font-weight: bold;
     font-size: 20px;
-    margin-top: 1rem;
     margin-bottom: 0;
+    width: 80%;
+                text-align: left;
 }
 .custom_h2{
     padding: 0 5px 0 5px;
     font-family: 'Josefin Slab', sans-serif;
 }
-.input_form{
-    border: 1px solid gray;
+.input_form, .select_form{
+    width: 80%;
+    border: 1px solid #bbb;
     border-radius: 5px;
     font-family: 'Arvo', serif;
+    margin-bottom: 2rem;
+}
+#main{
+    width: 40%;
+    background-color: white;
+    border-radius: 10px;
+    padding: 40px 0 40px 0;
+}
+.tableList{
+    line-height: 1 !important;
+    border: 1px solid rgba(100,100,100, 0.2);
+    width: 100%;
+    max-width: 100%;
+    margin: 10px auto;
+    clear: both;
+    border-spacing: 0;
+}
+#containertable{
+    width: 100%;
+    overflow-x: auto;
+    overflow-y: hidden;
 }
 .tableList th{
-    padding: 5px 0 5px 0;
+    cursor: pointer;
+    *cursor: hand;
+    background-repeat: no-repeat;
+    background-position: center right;
+    padding: 10px 10px 5px 10px !important;
     font-family: 'nunito', sans-serif;
     width: 150px;
-    text-transform: uppercase;
-    background: #eee;
+    font-size: 20px;
 }
 .tableList td{
     font-family: 'Nunito', sans-serif;
     padding: 5px 5px 5px 5px;
     font-weight: bold;
-    font-size:20px;
+    font-size:18px;
     color: #333;
+    border: 1px solid rgba(100,100,100, 0.2);
+}
+.tableList tr:hover:not(.th){
+    background-color: rgba(200,200,200, 0.1);
+}
+thead .sorting_asc{
+    background-image: url(DataTables/DataTables-1.10.24/images/sort_asc.png) !important;
+}
+thead .sorting_desc{
+    background-image: url(DataTables/DataTables-1.10.24/images/sort_desc.png) !important;
+}
+thead .sorting{
+    background-image: url(DataTables/DataTables-1.10.24/images/sort_both.png);
 }
 .editar{
     font-size:19px;
@@ -48,6 +91,20 @@ h1{
     color: #007bff;
 }
 .editar:hover{
+    background-color: #007bff;
+    color: white;
+}
+.alterar{
+    font-size:19px;
+    background-color: white;
+    border: 1px solid #007bff;
+    border-radius:5px;
+    padding: 4px 6px 4px 6px;
+    font-weight: bold;
+    transition-duration: 0.2s;
+    color: #007bff;
+}
+.alterar:hover{
     background-color: #007bff;
     color: white;
 }
@@ -67,27 +124,115 @@ h1{
     color: #ddd;
     cursor: not-allowed;
 }
-.tableList,td, th{
-    border-collapse: collapse;
-    border: 1px solid gray;
-}
-.tableList tr:nth-child(even) {
-    background: #eee
-}
 .submit{
+    margin: 10px;
     padding: 5px 10px 5px 10px;
     background-color: #007bff;
     border: 2px solid #007bff;
     color: white;
     border-radius: 5px;
     transition-duration: 0.2s;
+    width: 80%;
+    text-align: center;
 }
 .submit:hover{
     background-color: white;
     border: 2px solid #007bff;
     color: #007bff;
 }
+.footer{
+    font-family: 'K2D', sans-serif;
+    text-align: center;
+    padding: 20px;
+    width: 100%;
+    background-color: #ddd;
+    position: fixed;
+    bottom:0;
+    left:0;
+    box-shadow: 0 0 5px 2px #999;
+}
+#tabContainer{
+    background-color: white;
+    padding: 30px;
+    border-radius: 5px;
+    margin: 10px;
+}
+.single{
+    margin: 10px;
+    padding: 5px 10px 5px 10px;
+    background-color: #007bff;
+    border: 2px solid #007bff;
+    color: white;
+    border-radius: 5px;
+    transition-duration: 0.2s;
+    width: 150px;
+    text-align: center;
+}
+.single:hover{
+    background-color: white;
+    border: 2px solid #007bff;
+    color: #007bff;
+}
 
+.btn-pagina{
+    background-color: #007bff;
+    color: white;
+    transition-duration: 0.1s;
+    padding: 5px;
+    margin: 2px 0 2px 0;
+    font-family: 'K2D', sans-serif;
+    border: 2px solid #007bff;
+    cursor: pointer;
+}
+.btn-pagina:hover{
+    background-color: white;
+    color: #007bff;
+    border: 2px solid #007bff;
+}
+.previous{
+    border-radius: 50px 0 0 50px;
+    transition-duration: 0.1s;
+    margin: 2px;
+}
+.next{
+    border-radius: 0 50px 50px 0;
+    transition-duration: 0.1s;
+    margin: 2px;
+}
+.disabled{
+    background-color: #eee;
+    color: #ddd;
+    padding: 5px;
+    margin: 2px 0 2px 0;
+    font-family: 'K2D', sans-serif;
+    border: 2px solid #ddd;
+}
+.disabled:hover{
+    background-color: #eee;
+    color: #ccc;
+    padding: 5px;
+    margin: 2px 0 2px 0;
+    font-family: 'K2D', sans-serif;
+    border: 2px solid #ccc;
+    cursor: not-allowed;
+}
+.current{
+    background-color: white;
+    color: #007bff;
+    border: 1px solid #007bff;
+    padding: 6px 10px;
+}
+.current:hover{
+    background-color: white;
+    color: #007bff;
+    border: 1px solid #007bff;
+}
+#divCadastro{
+    width: 40%;
+    background-color: white;
+    border-radius: 10px;
+    padding: 40px 0 40px 0;
+}
 
 /*CSS APENAS DO SLIDER*/
 
