--- a/src/main/webapp/padrao.css
+++ b/src/main/webapp/padrao.css
@@ -31,10 +31,12 @@ h1{
     margin-bottom: 2rem;
 }
 #main{
-    width: 40%;
+    width: 80%;
     background-color: white;
     border-radius: 10px;
     padding: 40px 0 40px 0;
+    min-width: 300px;
+    max-width: 800px;
 }
 .tableList{
     line-height: 1 !important;
@@ -286,3 +288,77 @@ thead .sorting{
 }
 
 /*FIM CSS APENAS DO SLIDER*/
+
+/*NAVBAR SELECTIONS COMEÇO*/
+
+.select{
+    margin: 0 5px;
+    transition-duration: 0.2s;
+}
+.selectbtn{
+    background-color: #0077cc;
+    border: 0;
+    padding: 5px 10px;
+    color: white;
+    border-radius: 5px;
+    transition-duration: 0.2s;
+}
+.selectbtn:hover{
+    background-color: white;
+    color: #0077cc;
+}
+.select:hover .options {
+    background-color: white;
+    display: block;
+    transition-duration: 0.2s;
+}
+.options {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 80px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    border-radius: 5px;
+}
+.options a {
+    color: #007bff;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+.option{
+    transition-duration: 0.2s;
+    border-radius: 5px;
+}
+.option:hover{
+    background-color: #007bff;
+    color: white;
+}
+
+/*NAVBAR SELECTIONS FIM*/
+
+/* COMEÇO BLOCO DE AVISOS*/
+
+.aviso {
+    display: none; 
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto; 
+    background-color: rgba(0,0,0,0.2);
+}
+
+.modal-aviso {
+    background-color: #fefefe;
+    margin: 5% auto;
+    padding: 20px;
+    border-radius: 10px;
+    width: 25%;
+    text-align: center;
+}
+
+/* FIM BLOCO DE AVISOS*/
