Ajustes em Usuarios e Clientes, tabela clientes obsoleta gerenciamento de endereços criado, totalmente funcional alguns outros ajustes

--- a/src/main/webapp/padrao.css
+++ b/src/main/webapp/padrao.css
@@ -130,14 +130,13 @@ thead .sorting{
     cursor: not-allowed;
 }
 .submit{
-    margin: 10px;
     padding: 5px 10px 5px 10px;
     background-color: #007bff;
     border: 2px solid #007bff;
     color: white;
     border-radius: 5px;
     transition-duration: 0.2s;
-    width: 80%;
+    width: 100%;
     text-align: center;
 }
 .submit:hover{
@@ -153,6 +152,24 @@ thead .sorting{
     background-color: white !important;
     border: 2px solid #e8d52e;
     color: #e8d52e;
+}
+.green{
+    background-color: #00cc33 !important;
+    border: 2px solid #00cc33;
+}
+.green:hover{
+    background-color: white !important;
+    border: 2px solid #00cc33;
+    color: #00cc33;
+}
+.lightgreen{
+    background-color: #18e1a5 !important;
+    border: 2px solid #18e1a5;
+}
+.lightgreen:hover{
+    background-color: white !important;
+    border: 2px solid #18e1a5;
+    color: #18e1a5;
 }
 .submit disabled{
     background-color: #dddddd;
@@ -258,6 +275,37 @@ thead .sorting{
 }
 .img-produto{
     width: 250px;
+}
+.excluir{
+    background-color: red;
+    width: 20px;
+    height: 20px;
+}
+.enderecoTitulo{
+    width: 40%;
+    min-width: 150px;
+    font-family: 'Nunito', sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    color: white;
+    background-color: #006699;
+    border: 2px solid #006699;
+    border-radius: 5px;
+    padding: 5px;
+    transition-duration: 0.2s;
+}
+.enderecoTitulo:hover{
+    color: #006699;
+    background-color: white;
+}
+.false{
+    background-color: #999;
+    border: 2px solid #999;
+}
+.false:hover{
+    background-color: #eee;
+    border: 2px solid #999;
+    color: #999;
 }
 /*CSS APENAS DO SLIDER*/
 
