--- a/src/main/webapp/ProdutoSelecionado.css
+++ b/src/main/webapp/ProdutoSelecionado.css
@@ -1,30 +1,17 @@
+.row{
+    width: 95% !important;
+}
 
-/* 
-    Created on : 17/03/2021, 16:50:07
-    Author     : Bruno
-*/
-.pQuadro{
-    font-family: 'Nunito', sans-serif;
-    width: 200px;
-    font-size: 22px;
-}
-.col-md-5{
-    border: 2px solid #007bff;
-    padding: 5px;
-    margin-right: 2rem;
-}
 .produto{
     width: 80%;
     border: 1px solid #007bff;
     border-radius: 2px;
 }
-
 #comentario {
     width: 100%;
     height: 50px;
     margin-bottom: 10px;
 }
-
 #btnComent{
     width: 100%;
 }
@@ -41,10 +28,31 @@
     font-size: 20px;
     height: 90px;
     border: 1px solid #007bff;
-    border-radius: 2px;
-    min-height: 120px;
+    border-radius: 5px;
+    min-height: 60px;
 }
-
 #inputCEP{
     width: 90px;
+}
+#main{
+    width: 90% !important;
+    max-width: 1200px !important;
+    margin-top: 40px;
+}
+.block{
+    border-right: 2px solid #007bff;
+}
+.pPagto{
+    font-family: 'Nunito', sans-serif;
+    font-size: 24px;
+}
+.pQuadro{
+    font-family: 'Nunito', sans-serif;
+    width: 200px;
+    font-size: 22px;
+    font-weight: bold;
+}
+#myCarousel{
+    max-height: 390px;
+    min-height: 190px !important;
 }
